--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@emotion/react": "^11.14.0",
     "framer-motion": "^11.15.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "shiki": "^3.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
