--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "shiki": "^3.22.0"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@eslint/js": "^9.17.0",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
